--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -327,13 +327,21 @@
   PB_FRA_Purge_Aftermath:0 "The Morning After"
 
   PB_FRA_Maurras_Takeover:0 "Maurras Survives the Night"
+  PB_FRA_Maurras_Takeover_desc:0 "To the shock and suprise of all of france, Action Française, once banned and hounded by the goons of the regime has triumphed over the traitorous Doriot. Already talks are underway to invite the previous emperor Jean I to take back his rightful throne." 
   PB_FRA_Bourbon_Restoration:0 "The Bourbon Restoration"
+  PB_FRA_Bourbon_Restoration_desc:0 "The people of france rejoice! The Emperor, Jean I, deposed by the scheming of traitors and foreign enemies, has at last returned to his people, announcing the end of french humiliation and the beginning of a cultural revival. Vive Le Roi!"
   PB_FRA_Restore_Noble_Titles:0 "Reinstate the Noble Titles"
+  PB_FRA_Restore_Noble_Titles_desc:0 "At the end of the last war, the foreign imposed republican government abolished all landed titles of the nobility, depriving france of any sense of hierarchy and order. Despite the claims of bringing stability, the previous government refused to restore the titles. This injustice can not stand!"
   PB_FRA_Light_of_the_Sovereign:0 "Guiding Light of the Sovereign"
+  PB_FRA_Light_of_the_Sovereign_desc:0 "For centuries it was fact that the ruler knew what was best for his subjects, and since he was selected by god, his rule should be absolute, with the exception of spiritual matters, which fall under the church. This rule of life was denied by the revolutions and reforms that swept europe like fire in the 1700 and 1800s, inorder to return to tradition, we must accept the sacred right of the emperor to rule as he pleases"
   PB_FRA_Purge_Armand:0 "Purge the Left-Nationalists"
+  PB_FRA_Purge_Armand_desc:0 "Armand, while a powerful ally against the Doriotists in the days before our victory, has since then been simply a thorn in our side, calling for the workers of france to throw off the "Shackles of reactionary rule". If there is one group that cannot be tolerated in the new france, its rabble rousers!"
   PB_FRA_Support_Loyalists:0 "Welfare for the Loyal"
+  PB_FRA_Support_Loyalists_desc:0 "Through the hardships of the republic, thousands stood with the righful ruler of france, and many thousands more came over to our side after our victory, their loyal support should be rewarded."
   PB_FRA_Anti_Decadence_Propaganda:0 "Fight against Decadence"
+  PB_FRA_Anti_Decadence_Propaganda_desc:0 "Since the end of the war a pervasive decadence has swept through our beloved france, as the people are lured away from the words of christ towards mortal vices, as the workers are turned from fulfilling livelihoods by trade unions, as the women are turned away from home by so called "liberating" movements, france suffers. The only way to restore our former glory is to reverse these trends."
   PB_FRA_Renewed_Imperialism:0 "Reignite the Fire of Imperialism"
+  PB_FRA_Renewed_Imperialism_desc:0 "For over a century, france was an imperial power, with a fleet that sailed every sea, soldiers on all continents, and intrests in every nation. Since the end of the last war, we have beem without an empire, however while we know this will not last for long, the spirit of imperialism lies dormant within the french people, all it needs is a little spark."
 
   PB_FRA_Doriot_Takeover:0 "The Grand Marshal Stands Alone"
   PB_FRA_New_French_Man:0 "The New French Man"
@@ -354,7 +362,9 @@
   PB_FRA_Ideological_Fanatacism:0 "Ideological Fanatacism"
 
   PB_FRA_Doctrine_of_Integralism:0 "The Doctrine of Integralism"
+  PB_FRA_Doctrine_of_Integralism_desc:0 "Integralism is an ideology that rejects the modern structures of the nation state in favor of traditional hierarchy, seeking to revive a perceived older patriotism, based on faith, family and community."  
   PB_FRA_Catholic_State:0 "A Nation of Faith"
+  PB_FRA_Catholic_State_desc:0 "France has been a catholic nation since Constantine the Great established the church as the state religion of the roman empire, remaining firmly aligned with the church all the way up to the modern day. Much to the anger of the mason, Huguenot and jewish populations, this shall not change, all we shall do is make it official."
   PB_FRA_Anti_Parliamentarianism:0 "Reversing the French Reformation"
   PB_FRA_Anti_Semetism:0 "Anti-Semetic Propaganda"
   PB_FRA_Modern_Absolutism:0 "L’État, c’est moi"
