Dorito and monarchist loc
when you cum

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -344,13 +344,21 @@
   PB_FRA_Renewed_Imperialism_desc:0 "For over a century, france was an imperial power, with a fleet that sailed every sea, soldiers on all continents, and intrests in every nation. Since the end of the last war, we have beem without an empire, however while we know this will not last for long, the spirit of imperialism lies dormant within the french people, all it needs is a little spark."
 
   PB_FRA_Doriot_Takeover:0 "The Grand Marshal Stands Alone"
+  PB_FRA_Doriot_Takeover_desc:0 "After weeks of careful planning and manipulation, Doriots plans have come to fruition. In an orgy of chaos and violence, the enemies of the new france have been destroyed or sent into exile, and a new day dawns over a france ready to reclaim its destiny."
   PB_FRA_New_French_Man:0 "The New French Man"
+  PB_FRA_New_French_Man_desc:0 "The new french man as envisioned by Doriot is a selfless family man, devoted to the party and willing to lay down his life for his nation. The foundation is already in the population, all it needs is a little push."
   PB_FRA_Triumph_Will:0 "Triomphe de la Volonté"
+  PB_FRA_Triumph_Will_desc:0 "The ultimate will of the french people is victory, and the the ultimate expression of said will is the party, and the ultimate expression of the party is the leader."
   PB_FRA_Personality_Cult:0 "Cult of Personality"
+  PB_FRA_Personality_Cult_desc:0 "In Doriot, the Chairman of our Party, we have the kind of rare and precious leader who does not come along very often. A leader who has given his heart, and all his knowledge, skills and abilities to serving the cause of the liberation of the french people."
   PB_FRA_Anti_German_Fervor:0 "Intensify Anti-Germanism"
+  PB_FRA_Anti_German_Fervor_desc:0 "The single greatest threat to the new france, the german not only occupies our eastern lands, he occupies the minds of many of our people. Inorder to solve this crisis we must begin a campaign to teach the people about the true extent of the threat they face."
   PB_FRA_New_Feminism_Focus:0 "New Feminism"
+  PB_FRA_New_Feminism_Focus_desc:0 "In contrast to the degenerate "Old Feminism" of the past, the New Feminism advocated by Doriot encourages women to serve their natural roles as homemakers and child bearers with honor and pride."
   PB_FRA_Year_Zero:0 "Année Zéro"
+  PB_FRA_Year_Zero_desc:0 "At the decree of supreme leader Doriot, soldiers of the SP have descended upon towns and cities across the nation in order to destroy the "Three Degenerate Olds": Old Art, Old Faith, and Old Elites. In place of these ancient traditions will be a new french culture, designed to promote the common good and intrests of the french people."
   PB_FRA_A_New_France_Rises:0 "A New France from the Ashes"
+  PB_FRA_A_New_France_Rises_desc:0 "At long last the French people have stood up, rejecting foreign ideals and old degeneracy, we are now in a position to finally finish our vision of a reconstructed french society."
 
   PB_FRA_Armand_Takeover:0 "Armand's Power Grab"
   PB_FRA_Armandist_Constitution:0 "The Armandist Constitution"
@@ -366,23 +374,39 @@
   PB_FRA_Catholic_State:0 "A Nation of Faith"
   PB_FRA_Catholic_State_desc:0 "France has been a catholic nation since Constantine the Great established the church as the state religion of the roman empire, remaining firmly aligned with the church all the way up to the modern day. Much to the anger of the mason, Huguenot and jewish populations, this shall not change, all we shall do is make it official."
   PB_FRA_Anti_Parliamentarianism:0 "Reversing the French Reformation"
+  PB_FRA_Anti_Parliamentarianism_desc:0 "In the late 1700's, a wave of liberal and progressive change would sweep france, leading to the king being stripped of his powers, the traditional social hierarchy being shattered, since then, france has been struck by disaster after disaster, clearly the only way to restore glory to the nation is to reject the legacy of the reformation."
   PB_FRA_Anti_Semetism:0 "Anti-Semetic Propaganda"
+  PB_FRA_Anti_Semetism_desc:0 "While france has had a large jewish population for many years, the truth of the matter is that they are a foreign people that can never be truly integrated into the french people, no matter what the liberals among us may claim."
   PB_FRA_Modern_Absolutism:0 "L’État, c’est moi"
+  PB_FRA_Modern_Absolutism_desc:0 "Many foolishly assume that absolute monarchy is an outdated idea that is incompatible with the modern world. This is of course completely baseless, the absolute rule of the emperor is the only way france will ever be able to avenge the wrongs done to it."
   PB_FRA_Cooperation_with_the_Leagues:0 "Alliance with the Patriotic Leagues"
+  PB_FRA_Cooperation_with_the_Leagues_desc:0 "The patriotic leagues represent the militant and radical right, formed largely as a result of the chaos of the republican era, they have so far proved invaluable allies in our mission to rebuild france. Its time we make this alliance official."
   PB_FRA_Rally_the_Youth:0 "Rally the Youth"
+  PB_FRA_Rally_the_Youth_desc:0 "The youth are the future of france, with them the success of the empire ultimately rests, as such, we have long made efforts to court the sons of france to our cause. With our recent successes, it seems our efforts have borne fruit, as many thousands of students and young men around france march to the tune of the anthem, ready to give their all for the fatherland and emperor."
   PB_FRA_Imperial_Glory:0 "Rebirth of the French Empire"
+  PB_FRA_Imperial_Glory_desc:0 "At long last, after decades of humiliation, glory has once again blessed france, under the wise guide of the emperor we have brought life to a new and moral society, free of republican decadence and foreign influence. France is now secure to go for and reclaim her rightful destiny as the dominant world power. Vive la France!"
 
   PB_FRA_Anti_Leftism:0 "Bulwark against Socialism"
+  PB_FRA_Anti_Leftism_desc:0 "France must stand as a bulwark against revolution and jacobinism, the first step towards this is to publicly announce to all the world our opposition to socialist degeneracy!"
   PB_FRA_Eliminate_Unions:0 "Eliminate Unions Entirely"
+  PB_FRA_Eliminate_Unions_desc:0 "While for the most part unions have been removed from french society thanks to our efforts. However some still remain, and no matter how shackled and toothless they may be, their very existance is an insult to the new france, we must immediately enforce a ban on all trade unions."  
 
   PB_FRA_Revanchist_Fervor:0 "Revanchist Fervor"
+  PB_FRA_Revanchist_Fervor_desc:0 "France has long been denied its righful place as hegemon of europe. This tragedy can not stand! We must all dedicate ourselves to the restoration of french glory and dominance!"
   PB_FRA_Carolingian_Legacy:0 "Carolingian Legacy"
+  PB_FRA_Carolingian_Legacy_desc:0 "The modern frenchman is proudly descended from the frankish warriors who once spread across europe, bringing civilization to the ungrateful germanic barbarians. In order to foster a sense of national pride, we should seek to both emulate the conquests of the franks and encourage a sense of connection to them. "
   PB_FRA_Racial_Science:0 "Committee on the Racial Sciences"
+  PB_FRA_Racial_Science_desc:0 "The Racial supremacy of the frenchman is indisputable, however there still remains great debate over the racial hierarchy of europe and the world. In order to clear up any confusion, a Committee on the Racial Sciences will be established."
   PB_FRA_Propose_European_Commonwealth:0 "The European Commonwealth"
+  PB_FRA_Propose_European_Commonwealth_desc:0 "The New Europe as envisioned by Doriot is economically integrated, with its political heart in Paris. As we advance towards the final conflict against the forces of degeneracy, its important that we lay the ground work for the pan-european project sooner rather then later."
   PB_FRA_Purge_Catholic_Influence:0 "Purge Catholic Influences"
+  PB_FRA_Purge_Catholic_Influence_desc:0 "The church of rome has long held unjust influence in france, influencing our politics, economy and culture, while perhaps at some point it may of played a positive role, those days are long gone. The church of today simply serves to hinder the citizens ability to dedicate themselves to the state. For the good of ourselves and future generations, we must free ourselves from their curse."
   PB_FRA_Continental_System:0 "Establish the Continental System"
+  PB_FRA_Continental_System_desc:0 "With conflict between us and britain inevitable, we must prepare the people for the economic consequences of the end of all trade with the british. Trade shall slowly be phased out with hostile powers, replaced with cooperation with friendly regimes."
   PB_FRA_Expel_Germans:0 "Francify the Borderlands"
+  PB_FRA_Expel_Germans_desc:0 "The eternal enemy of france, the perfidious german still maintains a presence in our eastern lands, a presence of fith columnists and spies, waiting on the order from frankfurt to destroy the new france. For our sake and the sake of the continued existence of france, we must root them out!"
   PB_FRA_Manifest_Destiny:0 "Destinée Manifeste"
+  PB_FRA_Manifest_Destiny_desc:0 "It is the destiny of every strong people to go out and conquer land for themselves, those who do not are simply prey, living only until the hunters hunger for more."
 
   PB_FRA_Purge_Monarchist_Remnants:0 "Purge the Monarchist Remnants"
   PB_FRA_Assassinate_the_Royals:0 "No More Loose Ends"
