Puppet adjustments and tech teams

--- a/localisation/PB_autonomy_l_english.yml
+++ b/localisation/PB_autonomy_l_english.yml
@@ -10,7 +10,8 @@
  autonomy_PB_Autonomous_Colony:0 "Autonomous Colony"
 
  autonomy_PB_Satellite_State:0 "Satellite State"
- autonomy_PB_Imperial_Protectorate:0 "Imperial Protectorate"
+ autonomy_PB_Autonomous_Dependency:0 "Autonomous Dependency"
+ autonomy_PB_Autonomous_Puppet:0 "Autonomous Puppet"
  autonomy_PB_Collaborator_State:0 "Collaborator State"
 
  autonomy_PB_Imperial_Autonomy:0 "Imperial Autonomy"
