--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -125,22 +125,22 @@
  JAP_cn_ADJ:0 "Japanese"
  JAP_an_ADJ:0 "Japanese"
 
- AME_ni:0 "American Commonwealth"
- AME_ni_DEF:0 "American Commonwealth"
- AME_ds:0 "American Commonwealth"
- AME_ds_DEF:0 "American Commonwealth"
- AME_rc:0 "American Commonwealth"
- AME_rc_DEF:0 "The American Commonwealth"
- AME_an:0 "American Commonwealth "
- AME_an_DEF:0 "American Commonwealth"
- AME_cn:0 "American Commonwealth"
- AME_cn_DEF:0 "American Commonwealth"
- AME_lb:0 "American Commonwealth"
- AME_lb_DEF:0 "The American Commonwealth"
- AME_ss:0 "American Commonwealth"
- AME_ss_DEF:0 "The American Commonwealth"
- AME_jc:0 "American Commonwealth"
- AME_jc_DEF:0 "American Commonwealth"
+ AME_ni:0 "United Commonwealth"
+ AME_ni_DEF:0 "United Commonwealth"
+ AME_ds:0 "United Commonwealth"
+ AME_ds_DEF:0 "United Commonwealth"
+ AME_rc:0 "United Commonwealth"
+ AME_rc_DEF:0 "The United Commonwealth"
+ AME_an:0 "United Commonwealth "
+ AME_an_DEF:0 "United Commonwealth"
+ AME_cn:0 "United Commonwealth"
+ AME_cn_DEF:0 "United Commonwealth"
+ AME_lb:0 "United Commonwealth"
+ AME_lb_DEF:0 "The United Commonwealth"
+ AME_ss:0 "United Commonwealth"
+ AME_ss_DEF:0 "The United Commonwealth"
+ AME_jc:0 "United Commonwealth"
+ AME_jc_DEF:0 "United Commonwealth"
  AME_ni_ADJ:0 "American"
  AME_rc_ADJ:0 "American"
  AME_lb_ADJ:0 "American"
@@ -5843,6 +5843,31 @@ SAN_jc:0 "Sanghli State"
  OFA_ds_ADJ:0 "French"
  OFA_cn_ADJ:0 "French"
  OFA_an_ADJ:0 "French"
+
+ WGR_ni:0 "National Union of Germany"
+ WGR_ni_DEF:0 "National Union of Germany"
+ WGR_ds:0 "German Occupation Authority"
+ WGR_ds_DEF:0 "German Occupation Authority"
+ WGR_rc:0 "German Occupation Authority"
+ WGR_rc_DEF:0 "German Occupation Authority"
+ WGR_an:0 "German Occupation Authority"
+ WGR_an_DEF:0 "German Occupation Authority"
+ WGR_cn:0 "German Occupation Authority"
+ WGR_cn_DEF:0 "German Occupation Authority"
+ WGR_lb:0 "German Occupation Authority"
+ WGR_lb_DEF:0 "German Occupation Authority"
+ WGR_ss:0 "German Occupation Authority"
+ WGR_ss_DEF:0 "German Occupation Authority"
+ WGR_jc:0 "Revolutionary States of Germany"
+ WGR_jc_DEF:0 "Revolutionary States of Germany"
+ WGR_ni_ADJ:0 "German"
+ WGR_rc_ADJ:0 "German"
+ WGR_lb_ADJ:0 "German"
+ WGR_ss_ADJ:0 "German"
+ WGR_jc_ADJ:0 "German"
+ WGR_ds_ADJ:0 "German"
+ WGR_cn_ADJ:0 "German"
+ WGR_an_ADJ:0 "German"
 
 ###################################
 # TEMPLATE
