More french loc

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -361,11 +361,17 @@
   PB_FRA_A_New_France_Rises_desc:0 "At long last the French people have stood up, rejecting foreign ideals and old degeneracy, we are now in a position to finally finish our vision of a reconstructed french society."
 
   PB_FRA_Armand_Takeover:0 "Armand's Power Grab"
+  PB_FRA_Armand_Takeover_desc:0 "Through skillful maneuvering and plotting, Inessa Armand and her left-nationalists have seized the reins of the state, seeking to create a new nation built in their vision."
   PB_FRA_Armandist_Constitution:0 "The Armandist Constitution"
+  PB_FRA_Armandist_Constitution_desc:0 "The brightest minds of france have gathered in paris to draft a new constitution, transfering local power to regional unions instead of out of touch bureaucrats in paris, the constitution also secures the FPP's position as the sole legal party in france."
   PB_FRA_Left_Nationalism:0 "Nationalism without Capitalism"
+  PB_FRA_Left_Nationalism_desc:0 "For countless years foreign profiteers and plutocrats have plundered france and her people for all they are worth, for the first time in our history we say "No more!" French land for french people, french factories for french workers!"
   PB_FRA_Socialism_without_Internationalism:0 "Socialism without Internationalism"
+  PB_FRA_Socialism_without_Internationalism_desc:0 "In closed ranks the enemy attacks us, around our flag, let us rally together, what does threatening death matter to us? But the french race bent under shame must have only one standard, one motto: "Work and Justice, brotherhood of the workers!""
   PB_FRA_French_Path:0 "A New French Synthesis"
+  PB_FRA_French_Path_desc:0 "Reject the false dichotomy — Embrace the third position"
   PB_FRA_Indiscriminate_Conscription:0 "All Will Have the Chance to Die for France"
+  PB_FRA_Indiscriminate_Conscription_desc:0 "Soon the world will be plunged into total war, between us and our allies and the forces of the eternal anglo and german. In terms of sheer population they outnumber us massively. In order to claim total victory in the coming war we must press more of our population into service then most nations would be willing. No price is too high for france."
   PB_FRA_Joan_of_Arc_Legacy:0 "Legacy of Jeanne d'Arc"
   PB_FRA_Ideological_Fanatacism:0 "Ideological Fanatacism"
 
@@ -384,7 +390,7 @@
   PB_FRA_Rally_the_Youth:0 "Rally the Youth"
   PB_FRA_Rally_the_Youth_desc:0 "The youth are the future of france, with them the success of the empire ultimately rests, as such, we have long made efforts to court the sons of france to our cause. With our recent successes, it seems our efforts have borne fruit, as many thousands of students and young men around france march to the tune of the anthem, ready to give their all for the fatherland and emperor."
   PB_FRA_Imperial_Glory:0 "Rebirth of the French Empire"
-  PB_FRA_Imperial_Glory_desc:0 "At long last, after decades of humiliation, glory has once again blessed france, under the wise guide of the emperor we have brought life to a new and moral society, free of republican decadence and foreign influence. France is now secure to go for and reclaim her rightful destiny as the dominant world power. Vive la France!"
+  PB_FRA_Imperial_Glory_desc:0 "At long last, after decades of humiliation, glory has once again blessed france, under the wise guide of the emperor we have brought life to a new and moral society, free of republican decadence and foreign influence. France is now secure to go forward and reclaim her rightful destiny as the dominant world power. Vive la France!"
 
   PB_FRA_Anti_Leftism:0 "Bulwark against Socialism"
   PB_FRA_Anti_Leftism_desc:0 "France must stand as a bulwark against revolution and jacobinism, the first step towards this is to publicly announce to all the world our opposition to socialist degeneracy!"
@@ -457,6 +463,7 @@
   PB_FRA_MGE_Subservient_Partner:0 "What's Theirs is Ours"
   
   PB_FRA_Remilitarize_Lorraine:0 "Remilitarize Lorraine"
+  PB_FRA_Remilitarize_Lorraine_desc:0 "For too long the german enforced demilitarization of our eastern lands has been tolerated, with the german people unprepared for war, the time is right to fully enforce our sovereignty!"
   PB_FRA_Befriend_Russia:0 "Befriend Russia"
   PB_FRA_Befriend_Spain:0 "Befriend Spain"
   PB_FRA_Annex_Brittany:0 "March on Brest"
