--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -52,8 +52,10 @@
   PB_ENG_General_Election:0 "The General Election"
   PB_ENG_General_Election_desc:0 "The General Elections are finally here, and this election shall decide the fate of not only Britain and her economy, but the rest of the empire as a whole. All political parties in the spectrum, from the Worker's Union to the NPP, are vying for power, with varying policies that may strengthen or shaken the empire, so vote wisely."
   PB_ENG_London_Calling:0 "London Calling"
+  PB_ENG_London_Calling_desc:0 "
 
   PB_ENG_Tory_Victory:0 "A Tory Victory"
+  PB_ENG_Tory_Victory_desc:0 "Against all odds, the conservative party has clinched victory against the NPP and WUP, securing the stability and status quo of britain." 
   PB_ENG_Hoare_PM:0 "New Tory Progressivism"
   PB_ENG_Eden_PM:0 "The Old Eden Clique"
   PB_ENG_Hunger_Reforms:0 "The Hunger Plan"
@@ -68,20 +70,30 @@
   PB_ENG_Stability_under_Control:0 "Getting the House in Order"
 
   PB_ENG_WUP_Victory:0 "A Worker's Union Victory"
+  PB_ENG_WUP_Victory_desc:0 "To the shock of the ruling elites of the empire, the left wing Workers Union Party has secured a majority, carrying with them the hopes of the trade union, womens liberation and cooperative movements."
   PB_ENG_Gallacher_PM:0 "The Radical Faction"
+  PB_ENG_Gallacher_PM_desc:0 "The Radical Gallacher has been placed at the helm of the new WUP majority goverment by his allies in the trade union and womens movements, promising to implement a bold policy of economic transformation and social liberation."
   PB_ENG_Mosley_PM:0 "The Moderate Faction"
+  PB_ENG_Mosley_PM_desc:0 "Mosley and his clique of moderate reformers have taken the reins of the new WUP majority goverment, promising to implement a broad set of policies from pan-european cooperation to solving the housing problems britain faces."  
   PB_ENG_Integrate_the_UTU:0 "Integrate the United Trade Unions"
+  PB_ENG_Integrate_the_UTU_desc:0 "The Labour movement has been instrumental in our parties history, we are a party by and for workers, and it only makes sense that we bring the United Trade Unions into an advisory role to better represent the working men and women of this nation."
   PB_ENG_Embrace_Suffrage_Movement:0 "Embrace the Women's Liberation Movement"
+  PB_ENG_Embrace_Suffrage_Movement_desc:0 "For centuries the women of britain have been denied equal rights to the male population, forced to be homemakers and relegate themselves to be outside of socities view. While it will take many decades to correct these injustices, we can start now by endorsing movements for womens liberation and pushing for the right to vote for all adult women."
   PB_ENG_Cooperatives:0 "Encourage Cooperatives"
+  PB_ENG_Cooperatives_desc:0 "The cooperative movement traces its origins back to the 1800's in northern england, quickly spreading across england. The vision offered by those early pioneers and kept alive by the modern movement is one where men work an honest day's work for an honest day's pay, not for an employer, but for himself and his fellow man. We must give them our full support." 
   PB_ENG_Fight_Segregation:0 "Pursue Colonial Desegregation"
+  PB_ENG_Fight_Segregation_desc:0 "One of the greatest tragedies of the modern world is the continued existence of segregation, especially so in a nation that claims the title of "Bringers of Civilization" such as ours, we must end this affront to justice and morality as soon as possible."  
   PB_ENG_British_Bakunism:0 "Bakuninism with British Characteristics"
   PB_ENG_Humanist_Socialism:0 "Socialism with a Human Face"
+  PB_ENG_Humanist_Socialism_desc:0 "Mosley is above all a realist. He and his allies have long advocated for a "Humanist Socialism", one more palatable to the more well off members of the british working class and less opposed by the ruling elites. With Mosley at the helm, they can begin to implement their vision of a more just world."
   PB_ENG_Tackle_Housing_Crisis:0 "Tackle the Housing Crisis"
   PB_ENG_Europe_a_Nation:0 "Europe a Nation"
+  PB_ENG_Europe_a_Nation_desc:0 "Mosley and his supporters understand the only way to prevent greater war and devastation from bringing ruin to the world is to reach across the channel and promote brotherhood and unity between all european nations that wish for peace."  
   PB_ENG_Banking_Reforms:0 "Reform the Banking System"
   PB_ENG_Mixed_Market_Economy:0 "A Mixed Market Economy"
 
   PB_ENG_NPP_Victory:0 "A National People's Victory"
+  PB_ENG_NPP_Victory_desc:0 "Sending shockwaves around the world, the National People's Party has secured a working majority in parliament, promising to maintain and expand the british empire, prepare the nation for war against the upstart french and remodel society along new lines."
   PB_ENG_Russel_PM:0 "The Technocrats"
   PB_ENG_Orman_PM:0 "The Restorationists"
   PB_ENG_Corporatist_Economics:0 "A Corporatist Economy"
