German Ministers, Ideology stuff

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -3,9 +3,28 @@
   ##########################
   # MINISTERS
   ##########################
+  GER_PB_Ernst_Starhemberg:0 "Ernst Rüdiger Starhemberg"
+  GER_PB_Alfred_Hugenberg:0 "Alfred Hugenberg"
+  GER_PB_Wilhelm_Keitel:0 "Wilhelm Keitel"
+  GER_PB_Heinrich_Himmler:0 "Heinrich Himmler"
+  GER_PB_Anton_Dressler:0 "Anton Dressler"
+  GER_PB_Jaroslav_Krejci:0 "Jaroslav Krejčí"
+  GER_PB_Hjalmar_Schacht:0 "Hjalmar Schacht"
+  GER_PB_Arthur_Straubenburg:0 "Arthur Arz von Straußenburg"
+  GER_PB_Gottfried_Haberler:0 "Gottfried von Haberler"
+  GER_PB_Franz_Blucher:0 "Franz Blücher"
+  GER_PB_Theodor_Heuss:0 "Theodor Heuss"
   GER_PB_Gustav_Stresemann:0 "Gustav Stresemann"
+  GER_PB_Joseph_Goebbels:0 "Paul Joseph Goebbels"
+  GER_PB_Helene_Stocker:0 "Helene Stöcker"
+  GER_PB_Johann_Koplenig:0 "Johann Koplenig"
+  GER_PB_Adolf_Brand:0 "Adolf Brand"
+  GER_PB_Erich_Muhsam:0 "Erich Mühsam"
+
   GER_PB_Karl_Liebknecht:0 "Karl Liebknecht"
+
   GER_PB_Hermann_Muller:0 "Hermann Müller"
+
   GER_PB_Otto_Wels:0 "Otto Wels"
 
 
