--- a/localisation/PB_Government_l_english.yml
+++ b/localisation/PB_Government_l_english.yml
@@ -112,6 +112,16 @@ PB_Diplomatic_Strongman:0 "Diplomatic Strongman"
 PB_Military_Man:0 "Military Man"
 PB_Ambitious_Backstabber:0 "Ambitious Backstabber"
 PB_Man_of_the_People:0 "Man of the People"
+PB_Staunch_Plutocrat:0 "Staunch Plutocrat"
+PB_Resistance_Leader:0 "Icon of Resistance"
+PB_Industrialist:0 "Industrialist"
+PB_Great_War_Hero:0 "Great War Hero"
+PB_Great_War_Veteran:0 "Great War Veteran"
+PB_Intelligentsia:0 "Intelligentsia"
+PB_Vienna_Clique:0 "Vienna Clique"
+PB_Stirnerite_Clique:0 "Stirnerite Clique"
+PB_Berlin_Clique:0 "Berlin Clique"
+PB_Austrian_School:0 "Austrian School Proponent"
 
 PB_Technocrats:0 "Technocrat"
 PB_Militarists:0 "Militarist"
